force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>Stores patient information. Tracks whether a patient is self-funding or insured and links to an insurance company if applicable.</description>
    <label>Patient</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>