force-app/main/default/objects/Patient__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Street, city, state, ZIP/postal code, and country of the patient.</description>
    <inlineHelpText>Enter the patient’s full mailing address, including street, city, state, ZIP/postal code, and country.</inlineHelpText>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>