force-app/main/default/objects/Patient__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <description>Indicates how the patient’s treatment is financed - personally (self-funded) or through insurance coverage.</description>
    <inlineHelpText>Choose the patient’s payment method: Self-Funding or Insurance.</inlineHelpText>
    <label>Funding Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Funding</fullName>
            </value>
            <value>
                <fullName>Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>