force-app/main/default/objects/Patient__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insurance company linked to the patient. Required if Funding Type = Insured.</description>
    <label>Insurance Company</label>
    <referenceTo>Insurance_Company__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>