force-app/main/default/objects/Patient__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient&apos;s profile on Patient Portal.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>